add block Gallery

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,9 @@
           </div>
 
         </section>
+
+
+
         <section class="main__current-events current-events">
           <div class="current-events__foto">
             <img
@@ -126,31 +129,98 @@
           </div>
 
         </section>
-        <section class="main__about-us about-us">
-          <img
-            src="../src/images/Rectangle 20.jpg"
-            alt="Від класицизму до романтизму"
-            class="about-us__foto">
-          <div class="container">
-            <div class="about-us__content">
-              <div class="about-us__exhibition">
-                <a
-                  href="."
-                  class="about-us__exhibition-link"
-                  target="_blank"
+      </div>
+      <section class="main__about-us about-us">
+        <img
+          src="../src/images/Rectangle 20.jpg"
+          alt="Від класицизму до романтизму"
+          class="about-us__foto">
+        <div class="container">
+          <div class="about-us__content">
+            <div class="about-us__exhibition">
+              <a
+                href="."
+                class="about-us__exhibition-link"
+                target="_blank"
+              >
+                ВИСТАВКА
+              </a>
+              <span class="about-us__exhibition-date">
+                26/08/2019 - 11:00
+              </span>
+            </div>
+            <h3 class="about-us__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="main__gallery">
+        <div class="container">
+          <h2 class="main__title">Галерея</h2>
+          <div class="main__gallery-phone gallery-phone">
+            <button class="gallery-phone__button gallery-phone__button--1"></button>
+            <button class="gallery-phone__button gallery-phone__button--2"></button>
+            <button class="gallery-phone__button gallery-phone__button--3"></button>
+            <button class="gallery-phone__button gallery-phone__button--4"></button>
+            <div class="gallery-phone__slideshow">
+              <div class="gallery-phone__foto">
+                <img src="../src/images/gallery/Rectangle 13.5.jpg"
+                  alt="картина українки"
+                  class="gallery-phone__photo-item"
                 >
-                  ВИСТАВКА
-                </a>
-                <span class="about-us__exhibition-date">
-                  26/08/2019 - 11:00
-                </span>
               </div>
-              <h3 class="about-us__title">Від класицизму до романтизму</h3>
+              <div class="gallery-phone__foto">
+                <img src="../src/images/gallery/Rectangle 3.1.jpg"
+                alt="картина українське село"
+                class="gallery-phone__photo-item">
+              </div>
+              <div class="gallery-phone__foto">
+                <img src="../src/images/gallery/Rectangle 13.3.jpg"
+                alt="картина парк"
+                class="gallery-phone__photo-item"
+              >
+              </div>
+              <div class="gallery-phone__foto">
+                <img
+                  src="../src/images/gallery/Rectangle 13.4.jpg "
+                  alt="картина море"
+                  class="gallery-phone__photo-item">
+              </div>
             </div>
           </div>
-        </section>
 
-      </div>
+
+          <div class="main__gallery-desktop gallery-desktop">
+            <div class="gallery-desktop__slideshow">
+              <div class="gallery-desktop__foto gallery-desktop__foto--one">
+                <img src="../src/images/gallery/Rectangle 13.5_desktop.jpg"
+                  alt="картина українки"
+                  class="gallery-desktop__photo-item"
+                >
+              </div>
+              <div class="gallery-desktop__foto gallery-desktop__foto--two">
+                <img src="../src/images/gallery/Rectangle 3.1_desktop.jpg"
+                alt="картина українське село"
+                class="gallery-desktop__photo-item">
+              </div>
+              <div class="gallery-desktop__foto gallery-desktop__foto--three">
+                <img src="../src/images/gallery/Rectangle 13.3_desktop.jpg"
+                alt="картина парк"
+                class="gallery-desktop__photo-item"
+              >
+              </div>
+              <div class="gallery-desktop__foto gallery-desktop__foto--four">
+                <img
+                  src="../src/images/gallery/Rectangle 13.4_desktop.jpg "
+                  alt="картина море"
+                  class="gallery-desktop__photo-item">
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
