--- a/src/index.html
+++ b/src/index.html
@@ -49,16 +49,16 @@
         </section>
         <ul class="menu__list">
           <li class="menu__item">
-            <a href=" " class="menu__link">Про нас</a>
+            <a href="#about-as" class="menu__link">Про нас</a>
           </li>
           <li class="menu__item">
-            <a href=" " class="menu__link">Виставки та події</a>
+            <a href="#current-events" class="menu__link">Виставки та події</a>
           </li>
           <li class="menu__item">
-            <a href=" " class="menu__link">Галерея</a>
+            <a href="#gallery" class="menu__link">Галерея</a>
           </li>
           <li class="menu__item">
-            <a href=" " class="menu__link">Контакти</a>
+            <a href="#conacts" class="menu__link">Контакти</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
     <main class="main">
       <div class="container">
         <h2 class="main__title">Актуальні події</h2>
-        <section class="main__current-events current-events">
+        <section class="main__current-events current-events" id="current-events">
           <div class="current-events__foto">
             <img
               class="current-events__foto-item"
@@ -74,6 +74,7 @@
               alt="йду та повертаюсь"
             >
           </div>
+
           <div class="current-events__content">
             <div class="current-events__exhibition">
               <a
@@ -94,10 +95,7 @@
               Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
             </p>
           </div>
-
         </section>
-
-
 
         <section class="main__current-events current-events">
           <div class="current-events__foto">
@@ -127,10 +125,10 @@
               Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».
             </p>
           </div>
-
         </section>
       </div>
-      <section class="main__about-us about-us">
+
+      <section class="main__about-us about-us" id="about-as">
         <img
           src="../src/images/Rectangle 20.jpg"
           alt="Від класицизму до романтизму"
@@ -154,7 +152,7 @@
         </div>
       </section>
 
-      <section class="main__gallery">
+      <section class="main__gallery" id="gallery">
         <div class="container">
           <h2 class="main__title">Галерея</h2>
           <div class="main__gallery-phone gallery-phone">
@@ -188,8 +186,6 @@
               </div>
             </div>
           </div>
-
-
           <div class="main__gallery-desktop gallery-desktop">
             <div class="gallery-desktop__slideshow">
               <div class="gallery-desktop__foto gallery-desktop__foto--one">
@@ -218,10 +214,136 @@
             </div>
           </div>
         </div>
-
       </section>
 
+      <section class="main__contacts" id="conacts">
+        <article class="main__subscription subscription">
+          <div class="container">
+            <div class="subscription__content">
+              <h3 class="subscription__title">Підписка</h3>
+              <span class="subscription__describe">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </span>
+              <form
+                  class="subscription__form"
+                  action="."
+                  method="get">
+                <input
+                  type="email"
+                  class="subscription__form-input"
+                  name="email"
+                  placeholder="E-mail"
+                >
+                <button
+                  type="submit"
+                  class="subscription__button"
+                ></button>
+              </form>
+            </div>
+          </div>
+        </article>
+        <footer class="main__footer footer">
+          <div class="container">
+            <div class="footer__content">
+              <div class="footer__logo-social">
+                <a href="#" class="footer__logo">
+                  <img
+                    src="./images/NA MU.svg"
+                    alt="NA MU"
+                    class="footer__logo-item"
+                  >
+                </a>
+                <div class="footer__social">
+                  <a href="." class="footer__social-fb"></a>
+                  <a href="." class="footer__social-instagram"></a>
+                </div>
+              </div>
+              <div class="footer__schedule">
+                Графік роботи
+                <ul class="footer__schedule-list">
+                  <li class="footer__schedule-item">
+                    <p class="footer__schedule-time">
+                      12:00 — 20:00
+                    </p>
+                    <p class="footer__schedule-day">
+                      середа
+                    </p>
+                  </li>
+                  <li class="footer__schedule-item">
+                    <p class="footer__schedule-time">
+                      12:00 — 20:00
+                    </p>
+                    <p class="footer__schedule-day">
+                      четвер
+                    </p>
+                  </li>
+                  <li class="footer__schedule-item">
+                    <p class="footer__schedule-time">
+                      12:00 — 20:00
+                    </p>
+                    <p class="footer__schedule-day">
+                      п’ятниця
+                    </p>
+                  </li>
+                  <li class="footer__schedule-item">
+                    <p class="footer__schedule-time">
+                      11:00 — 19:00
+                    </p>
+                    <p class="footer__schedule-day">
+                      субота
+                    </p>
+                  </li>
+                  <li class="footer__schedule-item">
+                    <p class="footer__schedule-time">
+                      11:00 — 19:00
+                    </p>
+                    <p class="footer__schedule-day">
+                      неділя
+                    </p>
+                  </li>
+                </ul>
+                <p class="footer__schedule-day">
+                  Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+              <div class="footer__contacts">
+                Контакти:
+                <p class="footer__contacts-item">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54
+                  e-mail: info@namu.kiev.ua
+                </p>
+              </div>
+              <ul class="footer__menu">
+                <li class="footer__menu-item">
+                  <a href="gallery" class="footer__menu-link">Галерея</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="#about-as" class="footer__menu-link">Про нас</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="current-events" class="footer__menu-link">Виставки та події</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="#conacts" class="footer__menu-link">Контакти</a>
+                </li>
+              </ul>
+
+              <div class="footer__copyright">
+                <p class="footer__copyright-designed">
+                  Designed by Zhyriada Marina
+                </p>
+                <p class="footer__copyright-all">
+                  Copyright © 2019. All Rights Reserved.
+                </p>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </section>
     </main>
+    <a href="#" class="page__button-up buton-up"></a>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
