fixed small issues

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 
         <div class="events__content lecture">
           <img
-          src="./images/events-3.png"
+          src="./images/events-3-desktop.png"
           alt="lecture"
           class="lecture__image"
           >
@@ -97,31 +97,41 @@
           Галерея
         </h1>
         <div class="gallery__content">
-          <img
-            src="./images/gallery-1.png"
-            alt="gallery-1"
-            class="gallery__image"
-          >
-          <img
-            src="./images/gallery-2.png"
-            alt="gallery-2"
-            class="gallery__image"
-          >
-          <img
-            src="./images/gallery-3.png"
-            alt="gallery-3"
-            class="gallery__image"
-          >
-          <img
-            src="./images/gallery-4.png"
-            alt="gallery-4"
-            class="gallery__image"
-          >
-          <img
-            src="./images/gallery-5.png"
-            alt="gallery-5"
-            class="gallery__image"
-          >
+          <div class="gallery__image gallery__image-first">
+            <img
+              src="./images/gallery-1.png"
+              alt="gallery-1"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-second">
+            <img
+              src="./images/gallery-2.png"
+              alt="gallery-2"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-third">
+            <img
+              src="./images/gallery-3.png"
+              alt="gallery-3"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-fourth">
+            <img
+              src="./images/gallery-4.png"
+              alt="gallery-4"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-fifth">
+            <img
+              src="./images/gallery-5.png"
+              alt="gallery-5"
+              class="gallery__img"
+            >
+          </div>
         </div>
         <div class="gallery__selector">
           <img src="./images/ellipse-active.png" alt="1">
@@ -138,9 +148,17 @@
         <p class="subscription__description">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <form action="#" method="get" class="subscription__form form form--sub">
-          <input type="text" class="form-input" placeholder="E-mail">
-        <div class="subscription__form-button button button--red"></div>
+        <form
+          action="#"
+          method="get"
+          class="subscription__form form form--sub"
+        >
+          <input
+            type="text"
+            class="form-input"
+            placeholder="E-mail"
+          >
+          <div class="subscription__form-button button button--red"></div>
         </form>
       </section>
 
@@ -173,7 +191,7 @@
               <span class="bold">12:00 — 20:00</span>  п’ятниця
               <span class="bold">11:00 — 19:00</span>  субота
               <span class="bold">11:00 — 19:00</span>  неділя
-              <br> <br>
+
               Вихідні понеділок, вівторок
               Каса припиняє роботу за 1 годину
               до закриття музею
