Create 2 blocks: gallery and subscription

--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,70 @@
           <h2 class="page__section-title">
             Галерея
           </h2>
+          <div class="gallery__block">
+            <picture class="gallery__image">
+              <source srcset="./images/pictures/picture_1.png" media="(min-width: 1024px)">
+              <source srcset="./images/pictures/picture_1_tablet.png" media="(min-width: 650px)">
+              <img
+                class="gallery__image-mobile"
+                src="./images/pictures/picture_1_mobile.png" alt="Жінка у вінку"
+              >
+            </picture>
+
+            <img
+              src="./images/pictures/picture_tablet.png"
+              alt="Гуси" class="gallery__image gallery__image--tablet"
+            >
+
+            <img
+              src="./images/pictures/picture_2_desktop.png"
+              alt="Село"
+              class="gallery__image gallery__image--desktop-2"
+            >
+
+            <img
+              src="./images/pictures/picture_3_desktop.png"
+              alt="Жінка на лавці"
+              class="gallery__image gallery__image--desktop-3"
+            >
+
+            <img
+              src="./images/pictures/picture_4_desktop.png"
+              alt="Море"
+              class="gallery__image gallery__image--desktop-4"
+            >
+
+            <div class="gallery__slider slider">
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+              <div class="slider__dot"></div>
+            </div>
+
+          </div>
+        </section>
+
+        <section class="page__section subscription">
+          <div class="subscription__content">
+            <h2 class="page__section-title subscription__title">Підписка</h2>
+            <p class="subscription__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              action="/" class="subscription__block"
+              method="get"
+            >
+              <input class="subscription__input" type="email"
+              placeholder="E-mail"
+              required>
+              <button class="subscription__button" id="button">
+                >
+                <!-- <a href="#button" class="subscription__link">></a> -->
+              </button>
+            </form>
+
+          </div>
         </section>
       </main>
     </div>
