Create 2 blocks: gallery and subscription. 2nd try

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,6 @@
               Від класицизму до романтизму
             </h2>
           </div>
-
         </section>
 
         <section class="page__section gallery">
@@ -117,8 +116,14 @@
           </h2>
           <div class="gallery__block">
             <picture class="gallery__image">
-              <source srcset="./images/pictures/picture_1.png" media="(min-width: 1024px)">
-              <source srcset="./images/pictures/picture_1_tablet.png" media="(min-width: 650px)">
+              <source
+                srcset="./images/pictures/picture_1.png"
+                media="(min-width: 1024px)"
+              >
+              <source
+                srcset="./images/pictures/picture_1_tablet.png"
+                media="(min-width: 650px)"
+              >
               <img
                 class="gallery__image-mobile"
                 src="./images/pictures/picture_1_mobile.png" alt="Жінка у вінку"
@@ -160,7 +165,11 @@
 
         <section class="page__section subscription">
           <div class="subscription__content">
-            <h2 class="page__section-title subscription__title">Підписка</h2>
+            <h2
+              class="page__section-title subscription__title"
+            >
+                Підписка
+            </h2>
             <p class="subscription__subtitle">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
@@ -169,19 +178,19 @@
               action="/" class="subscription__block"
               method="get"
             >
-              <input class="subscription__input" type="email"
-              placeholder="E-mail"
-              required>
-              <button class="subscription__button" id="button">
+              <input
+                class="subscription__input"
+                type="email"
+                placeholder="E-mail"
+                required
+              >
+              <button class="subscription__button">
                 >
-                <!-- <a href="#button" class="subscription__link">></a> -->
               </button>
             </form>
-
           </div>
         </section>
       </main>
     </div>
-
   </body>
 </html>
