--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+<html lang="Ukr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Landing</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,500;0,900;1,100;1,300;1,500;1,900&display=swap"
+      rel="stylesheet"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,500;0,900;1,100;1,300;1,500;1,900&display=swap"
+      rel="stylesheet"
+    >
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__icons">
+        <a href="#" class="header__icons--burger">
+          <img
+            src="./images/icons/burger.png"
+            alt="burger icon"
+          >
+        </a>
+
+        <div class="header__icons-logotype">
+          <div class="header__icons-icon">
+            <img
+              src="./images/icons/logo.png"
+              alt="logo icon"
+              class="header__icons--logo"
+            >
+          </div>
+        </div>
+      </div>
+      <div class="header__photo"></div>
+      <div class="header__nav">
+        <h1 class="header__nav--content">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
+
+        <div class="header__button">
+          <p href="#" class="header__button--fake-button">
+            Квитки
+          </p>
+          <button class="header__button--real-button">
+            <img src="./images/icons/Vector-for-button.png" alt="button icon">
+          </button>
+        </div>
+
+      </div>
+
+      <div class="header__events">
+        <a href="#events" class="header__events--content">Події</a>
+      </div>
+    </header>
+
+
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
