--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__block">
+        <div class="header__menu header__menu--modify">
+          <a href="#menu" class="icon icon--menu-opener">
+            <img src="/images/icons/menu.svg" alt="Menu">
+          </a>
+        </div>
+
+        <h1 class="header__title">художній <br> музей</h1>
+
+        <div class="header__tickets">
+          <a href="/" class="header__tickets-text">квитки</a>
+          <a href="/" class="header__tickets-go">
+            <img
+              class="header__tickets-img"
+              src="/images/icons/tickets-go.svg" alt="Tickets Go">
+          </a>
+        </div>
+
+        <div class="header__events">
+          <p class="header__events-text">події</p>
+        </div>
+      </div>
+
+      <div class="header__picture">
+        <a href="/" class="header__picture-logo">NA<br>MU</a>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="top-actions menu__top">
+            <a href="/" class="logo">
+              
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
