add favicon, link FB and Instagram

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+    rel="icon" type="image/x-icon"
+    href="./images/NA MU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -254,8 +257,16 @@
                   >
                 </a>
                 <div class="footer__social">
-                  <a href="." class="footer__social-fb"></a>
-                  <a href="." class="footer__social-instagram"></a>
+                  <a
+                    href="https://www.facebook.com/namu.museum/"
+                    class="footer__social-fb"
+                    target="_blank"
+                  ></a>
+                  <a
+                    href="https://www.instagram.com/namu.museum/"
+                    class="footer__social-instagram"
+                    target="_blank"
+                  ></a>
                 </div>
               </div>
               <div class="footer__schedule">
