added menu, fixed small issues in footer, gallery still on development stage

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="script" href="./scripts/main.js">
   </head>
   <body>
     <header class="header">
-      <a href="#" class="header__menu">
+      <a href="#menu" class="header__menu">
         <img src="./images/menu-button.png" alt="menu">
       </a>
 
@@ -26,9 +27,44 @@
         </div>
         <div class="header__form-button button"></div>
       </div>
+      <div class="header__optional">ПОДІЇ</div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top-actions">
+            <a href="#" class="menu__cross">
+              <img
+                src="images/cross.svg"
+                alt="cross"
+                class="menu__cross-icon"
+              >
+            </a>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Актуальні події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Підписка</a>
+            </li>
+            <li class="menu__item">
+              <a href="#info" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+          <a href="tel:+38(044)278-13-57" class="menu__call">
+            +38 (044) 278-13-57
+          </a>
+        </div>
+      </div>
+    </nav>
+
     <main class="content">
-      <section class="page__events events">
+      <section class="page__events events" id="events">
         <h1 class="events__title">Актуальні події</h1>
         <div class="events__content event">
           <img
@@ -92,56 +128,65 @@
         </div>
       </section>
 
-      <section class="page__gallery gallery">
-        <h1 class="gallery__title">
+      <section class="page__gallery gallery" id="gallery">
+        <h2 class="gallery__title">
           Галерея
-        </h1>
-        <div class="gallery__content">
-          <div class="gallery__image gallery__image-first">
-            <img
-              src="./images/gallery-1.png"
-              alt="gallery-1"
-              class="gallery__img"
-            >
+        </h2>
+
+        <div class="swiper">
+          <div class="swiper__wrapper">
+            <div class="swiper__slide swiper__slide--1">
+              <div class="swiper__slide-image swiper__slide-image--1">
+                <img
+                  src="./images/gallery-1.png"
+                  alt="gallery-1"
+                  class="swiper__slide-img"
+                >
+              </div>
+            </div>
+            <div class="swiper__slide swiper__slide--2">
+              <div class="swiper__slide-image swiper__slide-image--2">
+                <img
+                  src="./images/gallery-2.png"
+                  alt="gallery-2"
+                  class="swiper__slide-img"
+                >
+              </div>
+            </div>
+            <div class="swiper__slide swiper__slide--3">
+              <div class="swiper__slide-image swiper__slide-image--3">
+                <img
+                  src="./images/gallery-3.png"
+                  alt="gallery-3"
+                  class="swiper__slide-img"
+                >
+              </div>
+            </div>
+            <div class="swiper__slide swiper__slide--4">
+              <div class="swiper__slide-image swiper__slide-image--4">
+                <img
+                  src="./images/gallery-4.png"
+                  alt="gallery-4"
+                  class="swiper__slide-img"
+                >
+              </div>
+            </div>
+            <div class="swiper__slide swiper__slide--5">
+              <div class="swiper__slide-image swiper__slide-image--5">
+                <img
+                  src="./images/gallery-5.png"
+                  alt="gallery-5"
+                  class="swiper__slide-img"
+                >
+              </div>
+            </div>
           </div>
-          <div class="gallery__image gallery__image-second">
-            <img
-              src="./images/gallery-2.png"
-              alt="gallery-2"
-              class="gallery__img"
-            >
-          </div>
-          <div class="gallery__image gallery__image-third">
-            <img
-              src="./images/gallery-3.png"
-              alt="gallery-3"
-              class="gallery__img"
-            >
-          </div>
-          <div class="gallery__image gallery__image-fourth">
-            <img
-              src="./images/gallery-4.png"
-              alt="gallery-4"
-              class="gallery__img"
-            >
-          </div>
-          <div class="gallery__image gallery__image-fifth">
-            <img
-              src="./images/gallery-5.png"
-              alt="gallery-5"
-              class="gallery__img"
-            >
-          </div>
-        </div>
-        <div class="gallery__selector">
-          <img src="./images/ellipse-active.png" alt="1">
-          <img src="./images/ellipse.png" alt="0">
-          <img src="./images/ellipse.png" alt="0">
-          <img src="./images/ellipse.png" alt="0">
+
+          <div class="swiper-pagination"></div>
         </div>
       </section>
 
-      <section class="page__subscription subscription">
+      <section class="page__subscription subscription" id="subscription">
         <h2 class="subscription__title">
           Підписка
         </h2>
@@ -162,7 +207,7 @@
         </form>
       </section>
 
-      <section class="info">
+      <footer class="info" id="info">
         <div class="info__emblems">
           <h1 class="info__title">
             na <br> mu
@@ -216,10 +261,10 @@
           <a class="info__items-link">Контакти</a>
         </div>
         <div class="info__copyright">
-          <p>Designed by Zhyriada Marina</p>
-          <p>Copyright © 2019. All Rights Reserved.</p>
+          <p class="info__copyright-1">Designed by Zhyriada Marina</p>
+          <p class="info__copyright-2">Copyright © 2019. All Rights Reserved.</p>
         </div>
-      </section>
+      </footer>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
