added swiper library, improwed my slider

--- a/src/index.html
+++ b/src/index.html
@@ -197,36 +197,12 @@
         <div class="container">
           <h2 class="page__section-title">Галерея</h2>
 
-          <!-- slider start-->
-          <div class="slider">
-            <div class="slider__sliders">
-
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio1"
-                class="slider__radio-btn"
-              >
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio2"
-                class="slider__radio-btn"
-              >
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio3"
-                class="slider__radio-btn"
-              >
-              <input
-                type="radio"
-                name="radio-btn"
-                id="radio4"
-                class="slider__radio-btn"
-              >
-
-              <div class="slider__slide first">
+          <!-- Slider  -->
+          <div class="swiper slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper ">
+              <!-- Slides -->
+              <div class="swiper-slide slider__slide">
                 <img
                   src="images/Rectangle13.png"
                   alt="photo"
@@ -234,7 +210,7 @@
                 >
               </div>
 
-              <div class="slider__slide second">
+              <div class="swiper-slide slider__slide ">
                 <img
                   src="images/Rectangle 24.1.png"
                   alt="photo"
@@ -242,29 +218,27 @@
                 >
               </div>
 
-              <div class="slider__slide three">
+              <div class="swiper-slide slider__slide">
                 <img
                   src="images/Rectangle 3.1.png"
-                  alt="photo"
-                  class="slider__img slider__img--3"
-                >
-              </div>
-
-              <div class="slider__slide four">
-                <img
-                  src="images/Rectangle 13.4.png"
                   alt="photo"
                   class="slider__img"
                 >
               </div>
-            </div>
 
-            <div class="slider__navigation-manual">
-              <label for="radio1" class="slider__manual-btn"></label>
-              <label for="radio2" class="slider__manual-btn"></label>
-              <label for="radio3" class="slider__manual-btn"></label>
-              <label for="radio4" class="slider__manual-btn"></label>
+              <div class="swiper-slide slider__slide">
+                <img
+                src="images/Rectangle 13.4.png"
+                alt="photo"
+                class="slider__img"
+              >
+              </div>
             </div>
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="slider__btn swiper-button-prev "></div>
+            <div class="slider__btn swiper-button-next "></div>
           </div>
 
           <!-- galery -->
