fixed footer, added links(footer), added button(footer), fixed subscription form size, fixed events pictures size, horizontal scroll will be fixed when i add gallery slider

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="script" href="./scripts/main.js">
   </head>
   <body>
-    <header class="header">
+    <header id="header" class="header">
       <a href="#menu" class="header__menu">
         <img src="./images/menu-button.png" alt="menu">
       </a>
@@ -231,17 +231,18 @@
               Графік роботи
             </div>
             <div class="info__description-schedule-time">
-              <span class="bold">12:00 — 20:00</span>  середа
-              <span class="bold">12:00 — 20:00</span>  четвер
-              <span class="bold">12:00 — 20:00</span>  п’ятниця
-              <span class="bold">11:00 — 19:00</span>  субота
-              <span class="bold">11:00 — 19:00</span>  неділя
-
+              <span class="bold">12:00 — 20:00</span> <br>  середа <br>
+              <span class="bold">12:00 — 20:00</span> <br> четвер <br>
+              <span class="bold">12:00 — 20:00</span> <br> п’ятниця <br>
+              <span class="bold">11:00 — 19:00</span> <br> субота <br>
+              <span class="bold">11:00 — 19:00</span> <br> неділя <br>
+              <br> <br>
               Вихідні понеділок, вівторок
               Каса припиняє роботу за 1 годину
               до закриття музею
             </div>
           </div>
+
           <div class="info__description-contacts">
             <div class="info__description-title">
               Контакти
@@ -253,12 +254,19 @@
               e-mail: info@namu.kiev.ua
             </div>
           </div>
+          <a class="arrow" href="#header">
+            <img
+              src="./images/Arrowup.svg"
+              alt="arrow"
+              class="arrow-up"
+            >
+          </a>
         </div>
         <div class="info__items">
-          <a class="info__items-link">Галерея</a>
-          <a class="info__items-link">Про нас</a>
-          <a class="info__items-link">Виставки і події</a>
-          <a class="info__items-link">Контакти</a>
+          <a href="#gallery" class="info__items-link">Галерея</a>
+          <a href="#header" class="info__items-link">Про нас</a>
+          <a href="#events" class="info__items-link">Виставки і події</a>
+          <a href="#subscription" class="info__items-link">Контакти</a>
         </div>
         <div class="info__copyright">
           <p class="info__copyright-1">Designed by Zhyriada Marina</p>
