--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,81 @@
         <div class="menu__content">
           <div class="top-actions menu__top">
             <a href="/" class="logo">
-              
+
             </a>
           </div>
         </div>
       </div>
     </nav>
+
+    <main>
+      <section class="page__section page__section--first" id="current-events">
+        <div class="container">
+          <div class="current-events__content">
+            <div class="current-events__title">
+              <p class="current-events__text">Актуальні події</p>
+
+              <div class="current-events__image">
+                <img
+                  class="current-events__image-pic"
+                  src="/images/current-events.jpg"
+                  alt="current-events">
+              </div>
+
+              <div class="current-events__description">
+
+                <div class="current-events__date">
+                  <p class="current-events__text-grey">виставка</p>
+                  <p class="current-events__text-date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="current-events__title">Йду i повертаюсь</div>
+
+                <div class="current-events__text-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+              </div>
+            </div>
+
+            <div class="current-events__image">
+              <img
+                class="current-events__image-pic"
+                src="/images/current-events2.jpg"
+                alt="current-events">
+            </div>
+
+            <div class="current-events__description">
+
+              <div class="current-events__date">
+                <p class="current-events__text-grey">виставка</p>
+                <p class="current-events__text-date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="current-events__title">I спогади i мрії</div>
+
+              <div class="current-events__text-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади i мрії».</div>
+            </div>
+
+            <div class="current-events__bottom">
+
+              <div class="current-events__bottom--image">
+                <img
+                  class="current-events__bottom--image-pic"
+                  src="/images/bottom.jpg"
+                  alt="current-events">
+              </div>
+
+              <div class="current-events current-events__bottom">
+                <div class="current-events__frameB">
+                  <p class="current-events__frame-textB">лекція</p>
+                  <p class="current-events__frame-dateB">26/08/2019 - 11:00</p>
+                </div>
+                <div class="current-events__titleB">Від класицизму до романтизму</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+    </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
