--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,60 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link
+      rel="shortcut icon"
+      href="favicon.png"
+      type="image/png"
+    >
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+    <header class="header">
+      <div class="container">
+
+        <div class="header__bg grid grid--desktop">
+          <div class="header__bg--img grid__item-tab--4-6 grid__item-desk--6-12"></div>
+        </div>
+
+        <div class="header__top">
+          <div class="header__top-wrap grid grid--desktop">
+            <a href="#" class="header__menu menu menu--open"></a>
+            <a href="#" class="header__logo logo grid__item-tab--4-5 grid__item-desk--6-7">
+              na <br> mu
+            </a>
+          </div>
+        </div>
+
+
+
+        <div class="grid grid--desktop">
+          <div class="header__content grid__item-tab--1-3 grid__item-desk--1-5">
+            <h1 class="header__title">
+              ХУДОЖНІЙ МУЗЕЙ
+            </h1>
+
+            <a href="#" class="header-action">
+              <div class="header-action__text">
+                КВИТКИ
+              </div>
+              <div class="header-action__button">
+                <div class="header-action__arrow"></div>
+              </div>
+            </a>
+
+          </div>
+        </div>
+
+      </div>
+    </header>
+
+
+
+    <nav></nav>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
